<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_card"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/fragment_horizontal_padding">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_alert" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BigTextPrimaryColor"
        android:layout_marginBottom="2dp"
        android:text="@string/no_network_connection" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/SmallTextPrimaryColor"
        android:text="@string/verify_network_connection" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/OrangeButtonOutline"
        android:layout_marginTop="16dp"
        android:text="@string/ok" />
</androidx.appcompat.widget.LinearLayoutCompat>