<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_card"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/card_padding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_msg"
        style="@style/RegularTextPrimaryColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/exclude_city" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            style="@style/RegularTextBlueColorBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_exclude"
            style="@style/RegularTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/exclude"
            android:textColor="@color/danger_3" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>