<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/fragment_horizontal_padding"
            android:paddingTop="@dimen/home_fragment_padding_top">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/metric_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/shape_card"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_distance" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/SmallTextSecondaryColor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/distance" />

                            <TextView
                                android:id="@+id/txt_mileage"
                                style="@style/ExtraBigTextPrimaryColor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/km" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:src="@drawable/ic_time" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/SmallTextSecondaryColor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time" />

                            <TextView
                                android:id="@+id/txt_hours"
                                style="@style/ExtraBigTextPrimaryColor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hours" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_routes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/BigTextPrimaryColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/traveled_cities" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/routeList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="106dp"
                    android:layoutAnimation="@anim/layout_animation"
                    android:overScrollMode="never" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_no_routes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:src="@drawable/ic_imgnocity" />

                <TextView
                    style="@style/BigTextPrimaryColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="28dp"
                    android:text="@string/register_visited_cities" />

                <TextView
                    style="@style/RegularTextPrimaryColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_visited_cities" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/include"
        layout="@layout/layout_no_connection" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/primary_2"
        android:contentDescription="@string/add_new_route"
        app:srcCompat="@drawable/ic_add_home"
        app:tint="@color/light_2" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>